Add OS-level thread demotion for exporter threads
Demote worker threads on Linux without JVM flags and update server/docs accordingly.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>